Fix gap between fields in advanced filtering modal (#697)

--- a/sass/px-data-grid-filter-entity.scss
+++ b/sass/px-data-grid-filter-entity.scss
@@ -9,7 +9,7 @@
 .labeled-text {
   display: inline-block;
   width: 33%;
-  padding: 0px 2px;
+  padding: 0 7px 3px 1px;
   box-sizing: border-box;
   vertical-align: bottom;
   margin-top: 7px;
